# bistro

./: .travis.yml  CMakeCPP.cmake  CMakeReport.cmake  Makefile  README.md
doc/latex/: 03-Simulator.tex
main/cpp/: CMakeLists.txt
main/cpp/execs/: CMakeLists.txt
main/cpp/gengeopop/: KdTree.h
resources/cmake/: CMakeLocal.cmake
